# ncnn_yolo

./: .gitignore  README.md  config.json
cpp/: CMakeLists.txt  CMakePresets.json
cpp/include/: ncnn_yolo.h
cpp/src/: main.cpp  ncnn_yolo.cpp  yolo_cls.cpp  yolo_det.cpp  yolo_obb.cpp  yolo_pose.cpp  yolo_seg.cpp
python/: yolo_runner.py
script/: download_model.py
